# hq-translator

./: CMakeLists.txt  Dockerfile  README.md  delete_docker.sh  docker-compose.yml  index.html  main.cpp  requirements.txt  run.sh  start_docker.sh  stop_docker.sh  temp.txt
gitpage/: index.html
include/capture/: webcam_capture.h
include/detection/: new.h  text_detector.h
include/gui/: cameraworker.h  frontprincipal.h
include/overlayer/: overlay_renderer.h  overlay_translator.h
include/services/: visionservices.h
include/threads/: detection_thread.h  translate_thread.h  webcam_thread.h
include/translation/: LibreTranslate.h  translate.h  translator.h
src/capture/: CMakeLists.txt  webcam_capture.cpp
src/detection/: CMakeLists.txt  new.cpp  test_tesseract.cpp  text_detector.cpp
src/gui/: CMakeLists.txt  cameraworker.cpp  frontprincipal.cpp  frontprincipal.ui
src/overlayer/: CMakeLists.txt  overlay_renderer.cpp
src/services/: CMakeLists.txt  visionservices.cpp
src/threads/: CMakeLists.txt  detection_thread.cpp  translate_thread.cpp  webcam_thread.cpp
src/translation/: CMakeLists.txt  LibreTranslate.cpp  translate.cpp  translator.cpp
struct/: struct_data.h
